20000416-08:47 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/compiler/genobj32.c
     + prefix "_HB_FUN_" added to function and external generated names.

20000415-21:1 GMT -3 Luiz Rafael Culik <culik@sl.conex.net)
 *doc/subcodes.txt
    *renamed all categories to Run time Error
 *doc/en/command.txt
    *rename category from command to oop command

20000415-16:04 DST Paul Tucker <ptucker@sympatico.ca>
   * source/rdd/dbfcdx/dbfcdx1.c
     * corrected my change to the segment naming.

20000415-21:39 GMT+1 Victor Szakats <info@szelvesz.hu>

   * makefile.bc
   * makefile.vc
   * source/rtl/lang/Makefile
   * source/rtl/lang/
     * msgca.c
     * msges.c
     * msgeu.c
     * msggl.c
     * Catalan, Spanish, Basque and Galician message modules converted to
       the new format and added to the makefiles.
     ; by Jose Lalin

20000415-15:15 DST Paul Tucker <ptucker@sympatico.ca>
   * source/rdd/dbfcdx/dbfcdx1.c
     * a number of casts to allow msvc to compile
     * added missing entries to workarea struct

20000415-20:46 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rdd/dbfcdx/dbfcdx1.c
     ! non-ANSI stricmp() changed to hb_stricmp()
     - Removed stdio.h and string.h since they are always included from hbapi.h
     ! Proprietary function _ltoa() changed to hb_cdxltoa()

   * include/hbapigt.h
     ! Doesn't include color.ch, but defines the same constants with HB_
       prefix to avoid collision with OS/2 (so far).
     * HB_CLR_LASTCOLOR renamed to HB_CLR_MAX_

   * source/rtl/gtapi.c
     + Using HB_CLR_MAX_ instead of duplicated define.
     * Prefixed CLR_ with HB_

   * include/color.ch
     - Removed the note that this file is also included from .C files.
     - Removed CLR_LASTCOLOR which was not CA-Cl*pper compatible anyway.

20000415-19:09 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rdd/dbfcdx/dbfcdx1.c
     ! testdbf was failing with missing symbols, fixed to let testdbf compile
